--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.2",
+    "gsap": "^3.12.2",
+    "ol": "^7.3.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
+    "react-svg": "^16.1.9",
+    "react-time-picker": "^6.5.1",
+    "sass": "^1.62.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
